<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ru.skillbranch.sbdelivery.ui.screens.custom.BackgroundTiledView
        android:id="@+id/nav_header_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.75"
        android:background="?attr/windowBackground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nav_header_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="?attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="@id/nav_header_background"
        app:layout_constraintEnd_toStartOf="@id/nav_header_logout"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="sidorov.ivan@mail.ru" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nav_header_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="?attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@id/nav_header_email"
        app:layout_constraintEnd_toStartOf="@id/nav_header_logout"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Сидоров Иван" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/nav_header_logout"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@id/nav_header_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nav_header_user"
        app:srcCompat="@drawable/ic_logout" />

    <ru.skillbranch.sbdelivery.ui.screens.main.MainMenuItemView
        android:id="@+id/nav_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/navItemHeight"
        app:icon="@drawable/ic_sb"
        app:name="@string/main_about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/nav_header_background"
        app:layout_constraintBottom_toTopOf="@id/nav_about">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ru.skillbranch.sbdelivery.ui.screens.main.MainMenuItemView
                android:id="@+id/nav_main_item"
                android:layout_width="match_parent"
                android:layout_height="?attr/navItemHeight"
                app:icon="@drawable/ic_main"
                app:name="@string/main_main" />

            <ru.skillbranch.sbdelivery.ui.screens.main.MainMenuItemView
                android:id="@+id/nav_menu_item"
                android:layout_width="match_parent"
                android:layout_height="?attr/navItemHeight"
                app:icon="@drawable/ic_menu"
                app:name="@string/main_menu" />

            <ru.skillbranch.sbdelivery.ui.screens.main.MainMenuItemView
                android:id="@+id/nav_favorite_item"
                android:layout_width="match_parent"
                android:layout_height="?attr/navItemHeight"
                app:icon="@drawable/ic_favorites"
                app:name="@string/main_favorites" />

            <ru.skillbranch.sbdelivery.ui.screens.main.MainMenuItemView
                android:id="@+id/nav_cart_item"
                android:layout_width="match_parent"
                android:layout_height="?attr/navItemHeight"
                app:icon="@drawable/ic_cart"
                app:name="@string/main_cart"
                tools:badge="3" />

            <ru.skillbranch.sbdelivery.ui.screens.main.MainMenuItemView
                android:id="@+id/nav_profile_item"
                android:layout_width="match_parent"
                android:layout_height="?attr/navItemHeight"
                app:icon="@drawable/ic_profile"
                app:name="@string/main_profile" />

            <ru.skillbranch.sbdelivery.ui.screens.main.MainMenuItemView
                android:id="@+id/nav_orders_item"
                android:layout_width="match_parent"
                android:layout_height="?attr/navItemHeight"
                app:icon="@drawable/ic_orders"
                app:name="@string/main_orders" />

            <ru.skillbranch.sbdelivery.ui.screens.main.MainMenuItemView
                android:id="@+id/nav_notifications_item"
                android:layout_width="match_parent"
                android:layout_height="?attr/navItemHeight"
                app:icon="@drawable/ic_notifications"
                app:name="@string/main_notifications"
                tools:badge="14" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
